force-app/main/default/objects/ErrorLog__c/ErrorLog__c.object-meta.xml
<CustomObject>
    <description>Stores error details from Apex triggers/classes for debugging.</description>
    <label>Error Log</label>
    <nameField>
        <displayFormat>Error Log-{0}</displayFormat>
        <label>Log #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Error Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>