force-app/main/default/objects/ErrorLog__c/fields/Log_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Log_Date_Time__c</fullName>
    <type>DateTime</type>
    <required>true</required>
    <label>Log Date/Time</label>
</CustomField>