force-app/main/default/objects/ErrorLog__c/fields/Log_Details__c.field-meta.xml
<CustomField>
    <fullName>Log_Details__c</fullName>
    <type>LongTextArea</type>
    <length>131072</length>
    <label>Log Details</label>
</CustomField>